--- a/app/index.html
+++ b/app/index.html
@@ -2,12 +2,20 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Change Me</title>
+    <title>Change Me, "No"</title>
     <link rel="stylesheet" href="./styles.css">
   </head>
   <body>
+    <!-- <div class="task-card">
+      <h4>My To Do List</h4>
+      <ul class="list">
+      </ul>
+      <label for="add-task-btn">Add more to your list!</label>
+      <input class="add-task-btn" type="text" name="" value="">
+      <button type="button" name="button">Add</button>
+    </div> -->
 
-    <section id="app">
+    <section class="" id="app">
       <!-- All HTML placed here will be erased when the app is running -->
     </section>
     <script src="./app.js"></script>
